--- a/styles/styles.css
+++ b/styles/styles.css
@@ -256,6 +256,7 @@ footer {
   text-align: center; }
 
 .social_media {
+  width: 320px;
   padding-right: 45px;
   padding-left: 45px;
   margin-top: 16px;
@@ -263,7 +264,11 @@ footer {
   flex-flow: row nowrap;
   justify-content: space-between; }
 
-@media screen and (min-width: 1000px) {
+i {
+  width: 16px;
+  height: 28px; }
+
+@media screen and (min-width: 320px) {
   header {
     height: 80px;
     padding: 26px 5%;
@@ -311,12 +316,16 @@ footer {
   .dot {
     color: #0000EC; }
 
+  /* Section Hello World */
   h1 {
     line-height: 82px;
-    font-size: 64px; }
+    font-size: 64px;
+    padding-left: 0px;
+    padding-right: 0px; }
 
   h2 {
-    font-size: 48px; }
+    font-size: 48px;
+    margin-left: 200px; }
 
   .tecnologia {
     display: inline; }
@@ -325,16 +334,25 @@ footer {
     display: inline; }
 
   .firstp {
+    padding-left: 0px;
+    padding-right: 0px;
     max-width: 628px; }
 
   #button1 {
+    margin-left: 0px;
+    margin-bottom: 5px;
     background-color: #00F3BB;
     width: 226px;
     height: 56px;
     justify-content: center; }
 
-  .episodios {
-    padding-top: 186px; }
+  /* Section Episodes */
+  .episodes {
+    height: 714px; }
+
+  .skewb {
+    padding-top: 26px;
+    padding-left: 0px; }
 
   .siblings {
     transform: skewY(6deg);
@@ -344,7 +362,94 @@ footer {
 
   iframe {
     width: 40.6%;
-    height: 5.9%; } }
+    height: 232px; }
+
+  /* Section phone*/
+  .about_us {
+    position: relative;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    margin-bottom: -31.5px; }
+
+  .we_from {
+    margin-left: 0px; }
+
+  .text {
+    width: 32.2%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start; }
+
+  .phone {
+    width: 457.6px;
+    height: 660px;
+    margin-left: 200px; }
+
+  /*Section Guests*/
+  .guest {
+    width: 33.3%;
+    height: 364px; }
+
+  .guests_images {
+    width: 100%;
+    margin-top: 36px;
+    margin-bottom: 64px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start; }
+
+  /*Section topics*/
+  .topics {
+    margin-left: 200px;
+    margin-right: 200px;
+    margin-top: 36px;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between; }
+
+  .topic_container {
+    width: 25%;
+    text-align: center;
+    margin-bottom: 34px; }
+
+  /*Latest news*/
+  .latest_news {
+    z-index: 0;
+    width: 100%;
+    height: 518px;
+    padding-top: 0px;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: center; }
+
+  .skew_back {
+    margin-top: -95px;
+    margin-left: 0px; }
+
+  .button2 {
+    transform: skewY(6deg);
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center; }
+
+  /*Footer*/
+  footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 95px;
+    padding-top: 0px;
+    font-size: 16px;
+    bottom: 0px; }
+
+  i {
+    width: 18px;
+    height: 28px; }
+
+  .social_media {
+    margin-top: 0px; } }
 @media screen and (min-width: 500px) {
   .siblings {
     padding-left: 6.9%;
@@ -358,9 +463,6 @@ footer {
   iframe {
     width: 40.6%;
     height: 5.9%;
-    margin-bottom: 1.8%; }
-
-  .skewb {
-    padding-left: 13.9%; } }
+    margin-bottom: 1.8%; } }
 
 /*# sourceMappingURL=styles.css.map */
