--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -22,6 +22,9 @@ h1{
     padding-right: 16px;
     font-weight: normal;
 }
+br{
+    padding-left: 16px;;
+}
 .firstp{
     margin-top: 16px;
     margin-bottom: 36px;
@@ -41,7 +44,7 @@ h2{
 .dot{
     display: inline;
 }
-#button1{
+button{
     background-color: $third;
     width: 288px;
     height: 48px;
@@ -53,8 +56,12 @@ h2{
     margin-right: 16px;
     margin-bottom: 24px;
 }
+button:hover{
+    background-image: linear-gradient(225deg, #0000FE 0%, #00F0B8 100%);
+    color: white;
+}
 /* Section Episodes */
-.episodes{
+#episodes{
     display: block;
     height: 1203.5px;
     transform: skewY(-6deg);
