Added footer correct height

--- a/styles/partials/_responsive.scss
+++ b/styles/partials/_responsive.scss
@@ -194,6 +194,7 @@
     /*Footer*/
 
     footer{
+        height: 140px;
         top: 0px;
         display: flex;
         justify-content: space-between;
