--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -22,8 +22,11 @@ h1{
     padding-right: 16px;
     font-weight: normal;
 }
+.strike{
+    text-decoration: line-through;
+}
 br{
-    padding-left: 16px;;
+    padding-left: 16px;
 }
 .firstp{
     margin-top: 16px;
@@ -85,7 +88,7 @@ button:hover{
     width: 100%;
 }
 iframe{
-
+    border: 0px;
     width: 100%;
     height: 236px;
     margin-bottom: 0px;
