--- a/styles/styles.css
+++ b/styles/styles.css
@@ -143,15 +143,19 @@ h1 {
   font-weight: normal; }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000325}}
+.strike {
+  text-decoration: line-through; }
+
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000328}}
 br {
   padding-left: 16px; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000328}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000331}}
 .firstp {
   margin-top: 16px;
   margin-bottom: 36px; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000332}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000335}}
 h2 {
   font-size: 36px;
   line-height: 42px;
@@ -161,15 +165,15 @@ h2 {
   font-family: 'IBM Plex Sans', sans-serif;
   font-weight: normal; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000341}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000344}}
 .tecnologia {
   display: none; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000344}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000347}}
 .dot {
   display: inline; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000347}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000350}}
 button {
   background-color: #00F3BB;
   width: 288px;
@@ -182,13 +186,13 @@ button {
   margin-right: 16px;
   margin-bottom: 24px; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000359}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000362}}
 button:hover {
   background-image: linear-gradient(225deg, #0000FE 0%, #00F0B8 100%);
   color: white; }
 
 /* Section Episodes */
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000364}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000367}}
 #episodes {
   display: block;
   height: 1203.5px;
@@ -197,13 +201,13 @@ button:hover {
   padding-top: 64px;
   background-image: linear-gradient(#0000FF, #0000A3); }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000372}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000375}}
 .skewb {
   padding-top: 1.2%;
   color: #FFFFFF;
   transform: skewY(6deg); }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000377}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000380}}
 .siblings {
   transform: skewY(6deg);
   display: flex;
@@ -214,21 +218,22 @@ button:hover {
   padding-top: 21px;
   width: 100%; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000387}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000390}}
 iframe {
+  border: 0px;
   width: 100%;
   height: 236px;
   margin-bottom: 0px; }
 
 /* Section phone*/
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000394}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000397}}
 .phone {
   width: 360px;
   height: 519px;
   margin-bottom: 27px;
   margin-left: -20px; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003100}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003103}}
 .about_us {
   position: relative;
   top: -95.5px;
@@ -236,17 +241,17 @@ iframe {
   flex-flow: column nowrap;
   margin-bottom: -41.5px; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003107}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003110}}
 .paragraph {
   margin-top: 8px; }
 
 /*Section Guests*/
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003113}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003116}}
 .guest {
   width: 100%;
   height: 243px; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003117}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003120}}
 .guests_images {
   margin-top: 14px;
   margin-bottom: 48px;
@@ -255,19 +260,19 @@ iframe {
   justify-content: flex-start; }
 
 /*Section topics*/
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003127}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003130}}
 .topics {
   margin-top: 37px;
   display: flex;
   flex-flow: column nowrap; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003132}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003135}}
 .icon {
   width: 104px;
   height: 104px;
   margin-bottom: 13px; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003137}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003140}}
 .topic_container {
   text-align: center;
   font-size: 24px;
@@ -275,7 +280,7 @@ iframe {
   margin-bottom: 42px; }
 
 /*Latest news*/
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003146}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003149}}
 .latest_news {
   z-index: 0;
   width: 100%;
@@ -285,13 +290,13 @@ iframe {
   transform-origin: top right;
   background-image: linear-gradient(#0000FF, #0000A3); }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003155}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003158}}
 .skew_back {
   transform: skewY(6deg);
   text-align: center;
   color: #FFFFFF; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003160}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003163}}
 .button2 {
   margin-top: 36px;
   margin-bottom: 67px;
