--- a/styles/styles.css
+++ b/styles/styles.css
@@ -125,21 +125,22 @@ main {
 
 @media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\000036}}
 p {
-  padding-left: 16px;
-  padding-right: 16px;
   font-family: 'IBM Plex Mono', monospace;
   line-height: 22px;
   letter-spacing: 1px; }
 
 /* Section Hello World */
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000316}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000314}}
+.title {
+  padding-left: 16px;
+  padding-right: 16px; }
+
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000318}}
 h1 {
   font-family: 'IBM Plex Sans', sans-serif;
   line-height: 42px;
   font-size: 36px;
   display: inline;
-  padding-left: 16px;
-  padding-right: 16px;
   font-weight: normal; }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000325}}
@@ -147,15 +148,11 @@ h1 {
   text-decoration: line-through; }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000328}}
-br {
-  padding-left: 16px; }
-
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000331}}
 .firstp {
   margin-top: 16px;
   margin-bottom: 36px; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000335}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000332}}
 h2 {
   font-size: 36px;
   line-height: 42px;
@@ -165,15 +162,15 @@ h2 {
   font-family: 'IBM Plex Sans', sans-serif;
   font-weight: normal; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000344}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000341}}
 .tecnologia {
   display: none; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000347}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000344}}
 .dot {
   display: inline; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000350}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000347}}
 button {
   background-color: #00F3BB;
   width: 288px;
@@ -182,17 +179,15 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: 16px;
-  margin-right: 16px;
   margin-bottom: 24px; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000362}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000357}}
 button:hover {
   background-image: linear-gradient(225deg, #0000FE 0%, #00F0B8 100%);
   color: white; }
 
 /* Section Episodes */
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000367}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000362}}
 #episodes {
   display: block;
   height: 1203.5px;
@@ -201,13 +196,13 @@ button:hover {
   padding-top: 64px;
   background-image: linear-gradient(#0000FF, #0000A3); }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000375}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000370}}
 .skewb {
   padding-top: 1.2%;
   color: #FFFFFF;
   transform: skewY(6deg); }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000380}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000375}}
 .siblings {
   transform: skewY(6deg);
   display: flex;
@@ -218,7 +213,7 @@ button:hover {
   padding-top: 21px;
   width: 100%; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000390}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000385}}
 iframe {
   border: 0px;
   width: 100%;
@@ -226,14 +221,14 @@ iframe {
   margin-bottom: 0px; }
 
 /* Section phone*/
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000397}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000392}}
 .phone {
   width: 360px;
   height: 519px;
   margin-bottom: 27px;
   margin-left: -20px; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003103}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\0000398}}
 .about_us {
   position: relative;
   top: -95.5px;
@@ -241,17 +236,19 @@ iframe {
   flex-flow: column nowrap;
   margin-bottom: -41.5px; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003110}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003105}}
 .paragraph {
+  padding-left: 16px;
+  padding-right: 16px;
   margin-top: 8px; }
 
 /*Section Guests*/
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003116}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003114}}
 .guest {
   width: 100%;
   height: 243px; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003120}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003118}}
 .guests_images {
   margin-top: 14px;
   margin-bottom: 48px;
@@ -260,19 +257,19 @@ iframe {
   justify-content: flex-start; }
 
 /*Section topics*/
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003130}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003128}}
 .topics {
   margin-top: 37px;
   display: flex;
   flex-flow: column nowrap; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003135}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003133}}
 .icon {
   width: 104px;
   height: 104px;
   margin-bottom: 13px; }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003140}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003138}}
 .topic_container {
   text-align: center;
   font-size: 24px;
@@ -280,8 +277,10 @@ iframe {
   margin-bottom: 42px; }
 
 /*Latest news*/
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003149}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_main\.scss}line{font-family:\00003147}}
 .latest_news {
+  padding-left: 16px;
+  padding-right: 16px;
   z-index: 0;
   width: 100%;
   height: 341px;
