Added internal links for the menu

--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -95,7 +95,7 @@ iframe{
     margin-bottom: 27px;
     margin-left: -20px;
 }
-.about_us {
+#about_us {
     position: relative;
     top: -95.5px;
     display: flex;
