--- a/styles/styles.css
+++ b/styles/styles.css
@@ -445,7 +445,7 @@ i {
 @media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_responsive\.scss}line{font-family:\00003106}}
   iframe {
     width: 40.6%;
-    height: 232px; }
+    height: 220px; }
 
   /* Section phone*/
 @media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_responsive\.scss}line{font-family:\00003113}}
@@ -563,12 +563,6 @@ i {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
-    align-content: space-around; }
-
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/Daniel\/Documents\/Acamica\/Proyectos\/Podcast\/styles\/partials\/_responsive\.scss}line{font-family:\00003226}}
-  iframe {
-    width: 40.6%;
-    height: 5.9%;
-    margin-bottom: 1.8%; } }
+    align-content: space-around; } }
 
 /*# sourceMappingURL=styles.css.map */
